Changed launch code
Launch code changed. Will be updating it more soon...